Adds sbt JVM options to improve speed