@@ -19,6 +19,15 @@ RUN echo "deb https://dl.bintray.com/sbt/debian /" >> /etc/apt/sources.list.d/sb
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
+# Taken from cats options: https://github.com/typelevel/cats/blob/master/.jvmopts
+RUN echo "-J-Xms1G" >> /etc/sbt/sbtopts \
+  && echo "-J-Xmx3G" >> /etc/sbt/sbtopts \
+  && echo "-J-XX:ReservedCodeCacheSize=250M" >> /etc/sbt/sbtopts \
+  && echo "-J-XX:+TieredCompilation" >> /etc/sbt/sbtopts \
+  && echo "-J-XX:-UseGCOverheadLimit" >> /etc/sbt/sbtopts \
+  && echo "-J-XX:+CMSClassUnloadingEnabled" >> /etc/sbt/sbtopts \
+  && echo "-J-XX:+UseConcMarkSweepGC " >>  /etc/sbt/sbtopts
+
 WORKDIR /code
 
 RUN sbt compile && rm -rf /tmp/* /var/tmp/*
